# LumaStack

./: .claudeignore  .gitignore  CLAUDE.md  README.md  architecture.md  manifest.json  project-structure.md  requirements.md  roadmap.md  user-stories.md 
.claude/agents/: lumastack-backend-expert.md  vue-frontend-dev.md
.claude/commands/: analyze-schema.md  commit.md
.claude/prompts/: code-review.md
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 20250120000001_create_users_table.sql
backend/scripts/: setup_db.sh
backend/src/: main.rs
backend/src/cli/: commands.rs  mod.rs
backend/src/db/: mod.rs  users.rs
backend/src/handlers/: health.rs  mod.rs
backend/src/models/: mod.rs  user.rs
database/: schema.sql
frontend/: components.json  index.html  package.json  vite.config.ts
frontend/src/: style.css
frontend/src/router/: guards.ts  index.ts  types.ts
frontend/src/schemas/: auth.ts
frontend/src/stores/: auth.ts  index.ts  notifications.ts  projects.ts
frontend/src/types/: index.ts
frontend/src/views/: DashboardView.vue  NotFoundView.vue  NotificationsView.vue
frontend/src/views/admin/: AdminView.vue
frontend/src/views/auth/: LoginView.vue  TelegramAuthView.vue
frontend/src/views/projects/: ProjectCommitsView.vue  ProjectDetailView.vue  ProjectTreeView.vue  ProjectsView.vue
frontend/src/views/scripts/: ScriptExecutionsView.vue  ScriptsView.vue
